# awoken.in

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  session-ses_09ec.md  session-ses_0b41.md
.opencode/: memory-ses_0b41.md
apps/dashboard/: package.json
apps/intelligence-engine/: clustering.py  db.py  llm.py  main.py  models.py  requirements.txt  scoring.py
apps/pipeline/: alembic.ini  clustering.py  database.py  extractor.py  intelligence_engine.py  llm.py  main.py  promoter.py  pyproject.toml  schemas.py  scoring.py  scraper.py
apps/pipeline/connectors/: base.py  github.py
apps/pipeline/migrations/: env.py
apps/pipeline/migrations/versions/: 68f39970ec67_v2_evidence_driven.py  825808c3ecab_investigation_workspace.py
public/: site.webmanifest
scripts/: audit.mjs  capture-compare.mjs  deep-audit.mjs  investigate-book.mjs  investigate-book2.mjs  investigate-book3.mjs  investigate-headings.mjs  investigate-nav-footer.mjs  investigate-thanks.mjs  investigate.mjs  quality-audit.mjs  screenshots.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
src/app/about/: layout.tsx  page.tsx
src/data/: blog.ts  engagement-models.ts  example-solutions.ts  faq.ts  implementation-timeline.ts  industries.ts  integrations.ts  metrics.ts  navigation.ts  philosophy.ts  problems.ts  resources.ts  revenue-calculator.ts  service-blueprints.ts  who-we-work-with.ts  why-awoken.ts  why-projects-fail.ts  workflow.ts
src/lib/: config.ts  constants.ts
(+158 files in other folders)
